# phonemeza

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: launch.json
api/: main.py
deploy/: .env.example  deploy.ps1  deploy.sh
frontend/: app.js  index.html  style.css
g2p/: __init__.py  bundle.py  data.py  infer.py  model.py  train.py
models/: results.csv
notebooks/: g2p.ipynb
scripts/: prepare_nchlt.py  train_language.py
tests/: test_api.py  test_infer_roundtrip.py  test_model.py
